# dotfiles

./: .gitconfig  .gitignore  .vimrc  .zshrc  CMakeLists.txt  bash.bashrc  config.toml  files.conf  files.txt  hyprland.conf  hyprpaper.conf  kitty.conf  update-local.sh  update-repo.sh
include/: commands.hxx  enviroment.hxx  parser.hxx
include/utils/: args.hxx
kitty/: kitty.conf
src/: args.cxx  commands.cxx  main.cxx  parser.cxx
src/utils/: args.cxx
